# lab1

./: Board.cpp  Board.h  CMakeLists.txt  RandomCell.h  calculations.cpp  calculations.h  experiment.cpp  experiment.h  main.cpp
